assets/themes/article/yamabuki.css
/* ... */
.easymde-rendered-content.easymde-markdown-theme-yamabuki table tr th {
  font-weight: bold;
  background-color: #f0f0f0;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki table tr th:nth-of-type(n),
.easymde-rendered-content.easymde-markdown-theme-yamabuki table tr td:nth-of-type(n) {
  min-width:85px;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .code-snippet__fix {
  word-wrap: break-word !important;
  font-size: 14px;
  margin: 10px 0;
  display: block;
  color: #333;
  position: relative;
  background-color: rgba(0,0,0,0.03);
  border: 1px solid #f0f0f0;
  border-radius: 2px;
  display: flex;
  line-height: 20px;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .code-snippet__fix pre {
  margin-bottom: 10px;
  margin-top: 0px;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .code-snippet__fix .code-snippet__line-index {
  counter-reset: line;
  flex-shrink: 0;
  height: 100%;
  padding: 1em;
  list-style-type: none;
  padding: 16px;
  margin: 0;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .code-snippet__fix .code-snippet__line-index li {
  list-style-type: none;
  text-align: right;
  line-height: 26px;
  color: black;
  margin: 0;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .code-snippet__fix .code-snippet__line-index li::before {
  min-width: 1.5em;
  text-align: right;
  left: -2.5em;
  counter-increment: line;
  content: counter(line);
  display: inline;
  color: rgba(0,0,0,0.3);
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .code-snippet__fix pre {
  overflow-x: auto;
  padding: 16px;
  padding-left: 0;
  white-space: normal;
  flex: 1;
  -webkit-overflow-scrolling: touch;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .code-snippet__fix code {
  text-align: left;
  font-size: 14px;
  display: block;
  white-space: pre;
  display: flex;
  position: relative;
  font-family: var(--easymde-code-font-family);
  padding: 0px;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .footnote-word {
  color: #1e6bb8;
  font-weight: bold;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .footnote-ref {
  color: #1e6bb8;
  font-weight: bold;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .footnote-item {
  display: flex;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .footnote-num {
  display: inline;
  width: 10%;
  background: none;
  font-size: 80%;
  opacity: 0.6;
  line-height: 26px;
  font-family: var(--easymde-content-font-family, var(--easymde-theme-font-family));
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .footnote-item p {
  display: inline;
  font-size: 14px;
  width: 90%;
  padding: 0px;
  margin: 0;
  line-height: 26px;
  color: black;
  word-break:break-all;
  width: calc(100%-50)
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki sub,
.easymde-rendered-content.easymde-markdown-theme-yamabuki sup {
  line-height: 0;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .footnotes-sep:before {
  content: "参考资料";
  display: block;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .easymde-math-block {
  display:block;
  text-align: center;
  overflow: auto;
  display: block;
  -webkit-overflow-scrolling: touch;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .easymde-math-block svg {
  max-width: 300% !important;
  -webkit-overflow-scrolling: touch;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .imageflow-layer1 {
  margin-top: 1em;
  margin-bottom: 0.5em;
  white-space: normal;
  border: 0px none;
  padding: 0px;
  overflow: hidden;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .imageflow-layer2 {
  white-space: nowrap;
  width: 100%;
  overflow-x: scroll;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .imageflow-layer3 {
  display: inline-block;
  word-wrap: break-word;
  white-space: normal;
  vertical-align: middle;
  width: 100%;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .imageflow-img {
  display: inline-block;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .imageflow-caption {
  text-align: center;
  margin-top: 0px;
  padding-top: 0px;
  color: #888;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki .nice-suffix-juejin-container {
  margin-top: 20px !important;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki figure a {
  border: none;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki figure a img {
  margin: 0px;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki figure {
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki figure a {
  display: flex;
  justify-content: center;
  align-items: center;
}

.easymde-rendered-content.easymde-markdown-theme-yamabuki figure a + figcaption {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-top: -35px;
  background: rgba(0,0,0,0.7);
  color: white;
  line-height: 35px;
  z-index: 20;
}
/* ... */

